--- a/Monday_Lesson_Inclass_Lecture.ipynb
+++ b/Monday_Lesson_Inclass_Lecture.ipynb
@@ -1110,13 +1110,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "0\n",
       "1\n",
       "8\n",
       "27\n",
@@ -1133,9 +1134,9 @@
    "source": [
     "#list_num = []\n",
     "\n",
-    "for i in range(1, 11):\n",
+    "for i in range(0, 10000):\n",
     "    print( i * i * i)\n",
-    "    if ( i * i * i)>1000:\n",
+    "    if ( i * i * i)>=1000:\n",
     "        break\n",
     "        \n",
     "        \n"
@@ -1151,7 +1152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1192,7 +1193,7 @@
     "# An else after an if runs if the if didn’t\n",
     "# An else after a for runs if the for didn’t break\n",
     "for num in range (1,101):\n",
-    "    givennum=0\n",
+    "    givennum=8\n",
     "    \n",
     "    for i in range(2,num):\n",
     "        if(num % i)==0:\n",
@@ -1214,11 +1215,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your ticket is $10\n"
+     ]
+    }
+   ],
    "source": [
-    "#person_age=x\n",
+    "person_age=40\n",
     "if person_age <18:\n",
     "    print(\"Your ticket is $5.00\")\n",
     "elif person_age <66:\n",
@@ -1226,6 +1235,13 @@
     "else:\n",
     "    print(\"Your ticket is $7.50\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
